--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>E-com Gamis — Koleksi Muslimah Elegan</title>
+  <title>Gamis fatma — Koleksi Muslimah Elegan</title>
   <meta name="description" content="Toko online gamis & abaya elegan dengan nuansa krem lembut dan desain modern.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
   <style>
@@ -236,7 +236,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><span>EG</span>Gamis Fatma</div>
+    <div class="logo"><span>GF</span>Gamis Fatma</div>
     <div style="display:flex;gap:12px;align-items:center;position:relative;">
       <input id="search" class="search" placeholder="Cari gamis, warna, abaya..." />
       <div style="position:relative;">
