--- a/index.html
+++ b/index.html
@@ -279,6 +279,15 @@
   </footer>
 
   <script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2JNLGYS15Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2JNLGYS15Z');
+</script>
     const PRODUCTS = [
       {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulangamis/image1.jpeg'},
       {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'kumpulangamis/image2.jpeg'},
