--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gamis fatma — Koleksi Muslimah Elegan</title>
+  <title>Gamis Fatma — Koleksi Muslimah Elegan</title>
   <meta name="description" content="Toko online gamis & abaya elegan dengan nuansa krem lembut dan desain modern.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
+  <!-- ✅ Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JNLGYS15Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-2JNLGYS15Z');
+  </script>
+
   <style>
     :root {
       --cream-bg: #f9f5ef;
@@ -225,7 +235,6 @@
     }
     .social a { margin: 0 8px; }
 
-    /* RESPONSIVE */
     @media (max-width: 768px) {
       .hero { flex-direction: column; text-align: center; padding: 60px 20px; }
       .hero img { width: 80%; }
@@ -279,15 +288,6 @@
   </footer>
 
   <script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2JNLGYS15Z"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2JNLGYS15Z');
-</script>
     const PRODUCTS = [
       {id:1,name:'Gamis Satin Zahra',price:379000,color:'Krem Muda',img:'kumpulangamis/image1.jpeg'},
       {id:2,name:'Abaya Silk Madinah',price:525000,color:'Beige Gold',img:'kumpulangamis/image2.jpeg'},
