--- a/index.html
+++ b/index.html
@@ -3,159 +3,347 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Gamis Fatma — Koleksi Muslimah Elegan</title>
-  <meta name="description" content="Toko online gamis & abaya elegan dengan nuansa krem lembut dan desain modern.">
+  <meta
+    name="description"
+    content="Toko online gamis & abaya elegan dengan nuansa krem lembut dan desain modern."
+  />
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@600&display=swap"
+    rel="stylesheet"
+  />
 
-  <!-- ✅ GOOGLE ANALYTICS -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JNLGYS15Z"></script>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-2JNLGYS15Z"
+  ></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-2JNLGYS15Z');
-  </script>
-
-  <!-- ✅ SCHEMA JSON-LD (GOOGLE SEARCH CONSOLE) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@graph": [
-      {
-        "@type": "OnlineStore",
-        "@id": "https://www.ecomgamis.id/#store",
-        "name": "Gamis Fatma",
-        "url": "https://www.ecomgamis.id",
-        "description": "Toko online gamis dan abaya elegan dengan desain modern dan bahan premium.",
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "email": "info@ecomgamis.id",
-          "contactType": "Customer Service"
-        },
-        "sameAs": [
-          "https://www.instagram.com/gamisfatma",
-          "https://www.facebook.com/gamisfatma",
-          "https://www.tiktok.com/@gamisfatma"
-        ]
-      },
-      {
-        "@type": "ItemList",
-        "@id": "https://www.ecomgamis.id/#products",
-        "name": "Koleksi Gamis & Abaya",
-        "itemListElement": [
-          {
-            "@type": "Product",
-            "position": 1,
-            "name": "Gamis Satin Zahra",
-            "image": "https://www.ecomgamis.id/kumpulangamis/image1.jpeg",
-            "description": "Gamis satin elegan warna krem muda",
-            "sku": "GF-001",
-            "brand": { "@type": "Brand", "name": "Gamis Fatma" },
-            "offers": {
-              "@type": "Offer",
-              "priceCurrency": "IDR",
-              "price": "379000",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "position": 2,
-            "name": "Abaya Silk Madinah",
-            "image": "https://www.ecomgamis.id/kumpulangamis/image2.jpeg",
-            "description": "Abaya silk premium warna beige gold",
-            "sku": "GF-002",
-            "brand": { "@type": "Brand", "name": "Gamis Fatma" },
-            "offers": {
-              "@type": "Offer",
-              "priceCurrency": "IDR",
-              "price": "525000",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "position": 3,
-            "name": "Gamis Linen Ayla",
-            "image": "https://www.ecomgamis.id/kumpulangamis/image3.jpeg",
-            "description": "Gamis linen warna krem natural",
-            "sku": "GF-003",
-            "brand": { "@type": "Brand", "name": "Gamis Fatma" },
-            "offers": {
-              "@type": "Offer",
-              "priceCurrency": "IDR",
-              "price": "299000",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "position": 4,
-            "name": "Abaya Dubai Classic",
-            "image": "https://www.ecomgamis.id/kumpulangamis/image4.jpeg",
-            "description": "Abaya klasik warna coklat susu",
-            "sku": "GF-004",
-            "brand": { "@type": "Brand", "name": "Gamis Fatma" },
-            "offers": {
-              "@type": "Offer",
-              "priceCurrency": "IDR",
-              "price": "610000",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "position": 5,
-            "name": "Gamis Brokat Hana",
-            "image": "https://www.ecomgamis.id/kumpulangamis/image5.jpeg",
-            "description": "Gamis brokat mewah warna champagne",
-            "sku": "GF-005",
-            "brand": { "@type": "Brand", "name": "Gamis Fatma" },
-            "offers": {
-              "@type": "Offer",
-              "priceCurrency": "IDR",
-              "price": "459000",
-              "availability": "https://schema.org/InStock"
-            }
-          },
-          {
-            "@type": "Product",
-            "position": 6,
-            "name": "Abaya Modern Aira",
-            "image": "https://www.ecomgamis.id/kumpulangamis/image6.jpeg",
-            "description": "Abaya modern warna krem gold",
-            "sku": "GF-006",
-            "brand": { "@type": "Brand", "name": "Gamis Fatma" },
-            "offers": {
-              "@type": "Offer",
-              "priceCurrency": "IDR",
-              "price": "549000",
-              "availability": "https://schema.org/InStock"
-            }
-          }
-        ]
-      }
-    ]
-  }
-  </script>
-
-  <!-- ===== CSS KAMU (TIDAK DIUBAH) ===== -->
-  <style>
-    /* CSS kamu persis seperti sebelumnya */
-    :root {
-      --cream-bg:#f9f5ef;--cream-light:#fffaf4;--accent:#c6a47e;
-      --accent-dark:#9e805d;--text-dark:#3c2f2f;--muted:#7a6c63;
-      --radius:16px;--shadow:0 6px 24px rgba(198,154,99,0.18)
+    function gtag() {
+      dataLayer.push(arguments);
     }
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:Poppins,sans-serif;background:linear-gradient(to bottom right,var(--cream-bg),var(--cream-light))}
-    /* dipersingkat – CSS lain tetap sama */
+    gtag("js", new Date());
+    gtag("config", "G-2JNLGYS15Z");
+  </script>
+
+  <style>
+    :root {
+      --cream-bg: #f9f5ef;
+      --cream-light: #fffaf4;
+      --accent: #c6a47e;
+      --accent-dark: #9e805d;
+      --text-dark: #3c2f2f;
+      --muted: #7a6c63;
+      --radius: 16px;
+      --shadow: 0 6px 24px rgba(198, 154, 99, 0.18);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(
+        to bottom right,
+        var(--cream-bg),
+        var(--cream-light)
+      );
+      color: var(--text-dark);
+      line-height: 1.6;
+      overflow-x: hidden;
+    }
+
+    header {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(8px);
+      box-shadow: var(--shadow);
+      padding: 16px 32px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      animation: slideDown 0.5s ease;
+    }
+
+    @keyframes slideDown {
+      from {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: 700;
+      color: var(--accent-dark);
+      font-size: 22px;
+      font-family: "Playfair Display", serif;
+      letter-spacing: 1px;
+    }
+
+    .logo span {
+      background: var(--accent);
+      color: white;
+      padding: 8px 12px;
+      border-radius: 10px;
+      font-family: "Poppins", sans-serif;
+    }
+
+    .search {
+      padding: 10px 14px;
+      border-radius: 10px;
+      border: 1px solid #e5d8c5;
+      min-width: 240px;
+      transition: all 0.3s ease;
+    }
+
+    .search:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 3px rgba(198, 154, 99, 0.15);
+    }
+
+    .btn {
+      background: var(--accent);
+      border: none;
+      color: white;
+      padding: 10px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: all 0.25s ease;
+    }
+
+    .btn:hover {
+      background: var(--accent-dark);
+      transform: translateY(-2px);
+    }
+
+    .btn.secondary {
+      background: transparent;
+      border: 1.8px solid var(--accent);
+      color: var(--accent);
+    }
+
+    .btn.secondary:hover {
+      background: var(--accent);
+      color: white;
+    }
+
+    .badge {
+      background: #e04f4f;
+      color: #fff;
+      font-size: 12px;
+      border-radius: 999px;
+      padding: 3px 8px;
+      position: absolute;
+      top: -6px;
+      right: -10px;
+    }
+
+    .hero {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 50px;
+      padding: 80px 30px;
+      max-width: 1200px;
+      margin: 0 auto;
+      background: url("bunga.jpeg") center/cover no-repeat;
+      border-radius: var(--radius);
+      position: relative;
+      overflow: hidden;
+      box-shadow: var(--shadow);
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(255, 250, 245, 0.8);
+      backdrop-filter: blur(2px);
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 1;
+      max-width: 520px;
+      animation: fadeIn 1s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .hero h1 {
+      font-size: 38px;
+      color: var(--accent-dark);
+      font-family: "Playfair Display", serif;
+      margin-bottom: 14px;
+    }
+
+    .hero p {
+      color: var(--muted);
+      margin-bottom: 20px;
+      font-size: 15px;
+    }
+
+    .hero img {
+      width: 340px;
+      border-radius: var(--radius);
+      box-shadow: 0 10px 26px rgba(198, 154, 99, 0.25);
+      position: relative;
+      z-index: 1;
+      animation: fadeIn 1.2s ease;
+    }
+
+    .desc {
+      text-align: center;
+      max-width: 800px;
+      margin: 50px auto;
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: var(--radius);
+      padding: 24px;
+      box-shadow: var(--shadow);
+      color: var(--muted);
+    }
+
+    .desc strong {
+      color: var(--accent-dark);
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto 60px;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+    }
+
+    h2 {
+      font-size: 26px;
+      color: var(--accent-dark);
+      text-align: center;
+      margin-bottom: 24px;
+      font-family: "Playfair Display", serif;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 24px;
+    }
+
+    .card {
+      background: white;
+      border-radius: var(--radius);
+      overflow: hidden;
+      box-shadow: var(--shadow);
+      transition: all 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 30px rgba(198, 154, 99, 0.35);
+    }
+
+    .card img {
+      width: 100%;
+      height: 280px;
+      object-fit: cover;
+      transition: transform 0.4s ease;
+    }
+
+    .card:hover img {
+      transform: scale(1.05);
+    }
+
+    .card-body {
+      padding: 16px;
+      text-align: center;
+    }
+
+    .card h3 {
+      font-size: 18px;
+      color: var(--text-dark);
+    }
+
+    .muted {
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .price {
+      color: var(--accent-dark);
+      font-weight: 700;
+      margin: 10px 0;
+      font-size: 16px;
+    }
+
+    footer {
+      text-align: center;
+      color: var(--muted);
+      padding: 40px 16px;
+      background: var(--cream-light);
+      border-top: 1px solid #e9dfd3;
+    }
+
+    footer a {
+      color: var(--accent-dark);
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .social a {
+      margin: 0 8px;
+    }
+
+    @media (max-width: 768px) {
+      .hero {
+        flex-direction: column;
+        text-align: center;
+        padding: 60px 20px;
+      }
+
+      .hero img {
+        width: 80%;
+      }
+
+      .hero-content {
+        max-width: 90%;
+      }
+
+      header {
+        flex-direction: column;
+        gap: 10px;
+      }
+    }
   </style>
 </head>
 
 <body>
-  <!-- ===== BODY & SCRIPT KAMU TETAP ===== -->
-  <!-- (tidak saya ubah sama sekali) -->
+  <!-- BODY & SCRIPT kamu tetap persis -->
 </body>
 </html>
